<resources>
    <string name="app_name">AASSHH</string>
    <string name="home">Home</string>
    <string name="cart">My Cart</string>
    <string name="order_history">Order History</string>
    <string name="menu">Menu</string>
    <string name="more">More</string>
    <string name="login">Log in</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="password_error">Invalid Password (Min 4 char)</string>
    <string name="not_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_started">Get Started</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="create_account">Create Account</string>
    <string name="phone_error">Invalid mobile number</string>
    <string name="phone_required">Mobile number is required</string>
    <string name="otp_sub_text">Enter the 4-digit OTP sent to your registered mobile number</string>
    <string name="verify_number">Verify Number</string>
    <string name="resend_otp_text">Don\'t receive the code?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_required">Otp is required</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name_error">Invalid name</string>
    <string name="email_invalid">Email invalid</string>
    <string name="confirm_password_error">Password missmatch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search for Brands, Products etc</string>
    <string name="not_logged_in">To access your account you need to login into your account</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">Set New Password</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_cart">Add to cart</string>

</resources>