<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.signup.CreateProfile">

    <include
        android:id="@+id/toolbar"
        layout="@layout/appbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/parent_padding">

            <TextView
                android:layout_marginTop="@dimen/size_24"
                style="@style/text_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAlignment="center"></TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                android:layout_marginTop="@dimen/size_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPersonName"
                    android:id="@+id/name_input"
                    android:paddingStart="@dimen/dimen_0"
                    android:hint="@string/name"
                    android:background="@color/background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textEmailAddress"
                    android:id="@+id/email_input"
                    android:paddingStart="@dimen/dimen_0"
                    android:hint="@string/email"
                    android:background="@color/background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/password_layout"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:id="@+id/password_input"
                    android:paddingStart="@dimen/dimen_0"
                    android:hint="@string/password"
                    android:background="@color/background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/conf_password_layout"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:id="@+id/conf_password_input"
                    android:paddingStart="@dimen/dimen_0"
                    android:hint="@string/confirm_password"
                    android:background="@color/background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/create_account"
                android:layout_marginTop="@dimen/size_120"
                android:text="@string/create_account"
                style="@style/PrimaryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Button>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>