<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.NewPasswordSet">

    <include
        android:id="@+id/toolbar"
        layout="@layout/appbar"></include>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/parent_padding">

            <TextView
                style="@style/text_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/new_password"
                android:textColor="@color/primary_dark"></TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/size_zero"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/conf_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_14">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/conf_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/size_zero" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/set_password"
                style="@style/PrimaryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_48"
                android:text="@string/sign_in"></Button>
            <!--            <view-->
            <!--                android:layout_marginTop="@dimen/margin_top"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="1dp"></view>-->


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>